# smart_executor

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  database.hpp  db.cpp
header/smart_executor/: execution_device.hpp  forward.hpp  resumable.hpp
header/smart_executor/coordinator/: abstract_coordinator.hpp  coordinator.hpp  worker.hpp
header/smart_executor/policy/: scheduler_policy.hpp  unprofiled.hpp  work_sharing.hpp
header/smart_executor/worker/: mail_box.hpp  worker_s.hpp
source/: resumable.cpp
source/worker/: worker_s.cpp
